<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbg"
    tools:context=".ResultActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:gravity="start|top|end"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:paddingEnd="5dp"
                android:paddingBottom="40dp">

                <TextView
                    android:id="@+id/textView_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wynik_wyszuikiwania"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <TextView
                    android:id="@+id/textView_nip_text"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nip"
                    android:textColor="#212121"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textView_nip_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:maxLines="2"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/placeholder"
                    android:textColor="#212121" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <TextView
                    android:id="@+id/textView_regon_text"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/regon"
                    android:textColor="#212121"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_regon_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:maxLines="2"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/placeholder"
                    android:textColor="#212121" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <TextView
                    android:id="@+id/textView_name_text"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nazwa"
                    android:textColor="#212121"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:maxLines="5"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:singleLine="false"
                    android:text="@string/placeholder"
                    android:textColor="#212121" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <TextView
                    android:id="@+id/textView_province_text"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wojew_dztwo"
                    android:textColor="#212121"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_province_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:maxLines="2"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/placeholder"
                    android:textColor="#212121" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <TextView
                    android:id="@+id/textView_city_text"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/miasto"
                    android:textColor="#212121"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textView_city_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:maxLines="2"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/placeholder"
                    android:textColor="#212121" />
            </LinearLayout>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn_saveToDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/save_to_db"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_returnToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/return_toMain"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_saveToDb"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>